<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="uk.me.peteharris.heartratecalculator.ViewModel" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="uk.me.peteharris.heartratecalculator.MainActivity">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/max_heart_rate"
                    bind:addTextChangedListener="@{viewModel.maxHrChangeListener}"
                    android:id="@+id/maxheartrate" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/resting_heart_rate"
                    bind:addTextChangedListener="@{viewModel.restingHrChangeListener}"
                    android:id="@+id/minheartrate" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="72dp"
                android:gravity="center"
                tools:text="160"
                android:id="@+id/heartRateLabel"
                style="@style/TextAppearance.AppCompat.Display4"
                android:text="@{viewModel.heartRate}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Percentage: 55%"
                android:id="@+id/percentageLabel"
                style="@style/TextAppearance.AppCompat.Display2"
                android:text="@{viewModel.percentage}" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:max="100"
                bind:onSeekBarChangeListener="@{viewModel.percentageChangeListener}"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</layout>